<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/childDataCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginStart="5dp"
    android:layout_marginTop="5dp"
    android:animateLayoutChanges="true"
    android:backgroundTint="@color/colorBlue"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    >
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:padding="5dp"
      android:theme="@style/BlueTheme"
      >

    <LinearLayout
        android:id="@+id/card_header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >
      <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="5dp"
          android:layout_marginStart="5dp"
          android:layout_weight="1"
          android:gravity="start|center"
          android:padding="3dp"
          android:text="Child"
          android:textColor="@color/colorBlack"
          android:textSize="22sp"
          android:textStyle="bold"
          />
      <TextView
          android:id="@+id/child_id"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_marginEnd="5dp"
          android:layout_marginStart="5dp"
          android:layout_weight="1"
          android:enabled="false"
          android:textStyle="bold|italic"
          android:textSize="16sp"
          android:gravity="center|end"
          android:text="ID_1234-5678-9101"
          android:visibility="visible"

          />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhiteTrans"
        android:orientation="vertical"

        >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginEnd="5dp"
          android:orientation="horizontal"
          android:weightSum="2"
          >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            android:layout_weight=".8"
            >
          <de.hdodenhof.circleimageview.CircleImageView
              android:id="@+id/child_image"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_centerInParent="true"
              android:layout_margin="5dp"
              android:src="@drawable/account_child_white_48x48"
              app:civ_border_color="@color/colorBlue"
              app:civ_border_width="3dp"
              />

          <ImageView
              android:layout_width="30dp"
              android:layout_height="30dp"
              android:layout_alignParentBottom="true"
              android:layout_marginBottom="15dp"
              android:layout_marginStart="24dp"
              android:background="@color/colorGreyTrans"
              android:paddingBottom="3dp"
              android:paddingEnd="3dp"
              android:paddingStart="1dp"
              android:paddingTop="2dp"
              android:src="@drawable/baseline_add_a_photo_white_18dp"
              />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:orientation="vertical"
            >

          <com.rengwuxian.materialedittext.MaterialEditText
              android:id="@+id/child_first_name"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/first_name"
              android:inputType="textPersonName"
              app:met_checkCharactersCountAtBeginning="false"
              app:met_floatingLabel="highlight"
              app:met_maxCharacters="25"
              app:met_minCharacters="1"
              app:met_primaryColor="@color/colorBlueAccent"
              app:met_singleLineEllipsis="true"
              />

          <com.rengwuxian.materialedittext.MaterialEditText
              android:id="@+id/child_last_name"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/last_name"
              android:inputType="textPersonName"
              app:met_checkCharactersCountAtBeginning="false"
              app:met_floatingLabel="highlight"
              app:met_maxCharacters="25"
              app:met_minCharacters="1"
              app:met_primaryColor="@color/colorBlueAccent"
              app:met_singleLineEllipsis="true"
              />

        </LinearLayout>

      </LinearLayout>

      <com.rengwuxian.materialedittext.MaterialEditText
          android:id="@+id/input_layout_dob"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginEnd="5dp"
          android:layout_marginStart="5dp"
          android:hint="@string/date_of_birth"
          android:inputType="date"
          app:met_maxCharacters="10"
          app:met_minCharacters="10"
          app:met_primaryColor="@color/colorBlueAccent"
          app:met_checkCharactersCountAtBeginning="false"
          app:met_floatingLabel="highlight"
          app:met_singleLineEllipsis="true"
          />

      <com.rengwuxian.materialedittext.MaterialEditText
          android:id="@+id/input_layout_address_ln_1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginEnd="5dp"
          android:layout_marginStart="5dp"
          android:hint="@string/addy_ln_1"
          android:inputType="textPostalAddress"
          app:met_checkCharactersCountAtBeginning="false"
          app:met_floatingLabel="highlight"
          app:met_primaryColor="@color/colorBlueAccent"
          app:met_singleLineEllipsis="true"
          app:met_maxCharacters="25"
          app:met_minCharacters="0"
          />

      <com.rengwuxian.materialedittext.MaterialEditText
          android:id="@+id/input_layout_address_ln_2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginEnd="5dp"
          android:layout_marginStart="5dp"
          android:hint="@string/addy_ln_1"
          android:inputType="textPostalAddress"
          app:met_checkCharactersCountAtBeginning="false"
          app:met_floatingLabel="highlight"
          app:met_primaryColor="@color/colorBlueAccent"
          app:met_singleLineEllipsis="true"
          app:met_maxCharacters="25"
          app:met_minCharacters="0"
          />

      <com.rengwuxian.materialedittext.MaterialEditText
          android:id="@+id/input_layout_city"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginEnd="5dp"
          android:layout_marginStart="5dp"
          android:hint="@string/city"
          android:inputType="textPostalAddress"
          app:met_checkCharactersCountAtBeginning="false"
          app:met_floatingLabel="highlight"
          app:met_primaryColor="@color/colorBlueAccent"
          app:met_singleLineEllipsis="true"
          app:met_maxCharacters="25"
          app:met_minCharacters="0"
          />

      <com.rengwuxian.materialedittext.MaterialEditText
          android:id="@+id/input_layout_state"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginEnd="5dp"
          android:layout_marginStart="5dp"
          android:hint="@string/state"
          android:inputType="textCapCharacters"
          app:met_checkCharactersCountAtBeginning="false"
          app:met_floatingLabel="highlight"
          app:met_maxCharacters="2"
          app:met_minCharacters="0"
          app:met_primaryColor="@color/colorBlueAccent"
          app:met_singleLineEllipsis="true"
          />

      <com.rengwuxian.materialedittext.MaterialEditText
          android:id="@+id/input_layout_zip"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginEnd="5dp"
          android:layout_marginStart="5dp"
          android:hint="@string/zip"
          android:inputType="textPostalAddress"
          app:met_checkCharactersCountAtBeginning="false"
          app:met_floatingLabel="highlight"
          app:met_maxCharacters="10"
          app:met_minCharacters="0"
          app:met_primaryColor="@color/colorBlueAccent"
          app:met_singleLineEllipsis="true"
          />

      <LinearLayout
          android:id="@+id/check_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="start|center"
          android:orientation="horizontal"
          android:paddingStart="5dp"
          android:paddingTop="10dp"
          >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/set_child_as_active"
            android:textSize="18sp"
            />

        <CheckBox
            android:id="@+id/active_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:gravity="center"
            android:checked="true"
            />

      </LinearLayout>

    </LinearLayout>

  </LinearLayout>
</android.support.v7.widget.CardView>

