<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pediatricianDataCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginStart="5dp"
    android:layout_marginTop="5dp"
    android:backgroundTint="@color/colorRed"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:padding="5dp"
    >
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:padding="5dp"
      android:theme="@style/RedTheme"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        >

      <TextView
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="2"
          android:gravity="start|center"
          android:layout_marginStart="5dp"
          android:layout_marginEnd="5dp"
          android:text="Pediatrician"
          android:textColor="@color/colorBlack"
          android:textSize="22sp"
          android:textStyle="bold"
          />

      <ImageButton
          android:id="@+id/delete_pediatrician_card_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:backgroundTint="@android:color/transparent"
          android:foreground="?android:attr/selectableItemBackground"
          android:padding="3dp"
          android:src="@android:drawable/ic_menu_close_clear_cancel"
          android:tint="@color/colorBlack"

          />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhiteTrans"
        android:gravity="start"
        android:orientation="vertical"
        >
      <com.rengwuxian.materialedittext.MaterialEditText
          android:id="@+id/input_layout_ped_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/ped_name"
          android:inputType="textPersonName"
          app:met_checkCharactersCountAtBeginning="false"
          app:met_floatingLabel="highlight"
          app:met_maxCharacters="30"
          app:met_minCharacters="1"
          app:met_primaryColor="@color/colorRedAccent"
          app:met_singleLineEllipsis="true"
          />

      <com.rengwuxian.materialedittext.MaterialEditText
          android:id="@+id/input_layout_ped_office_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/ped_office_name"
          android:inputType="textCapWords"
          app:met_checkCharactersCountAtBeginning="false"
          app:met_floatingLabel="highlight"
          app:met_maxCharacters="30"
          app:met_minCharacters="1"
          app:met_primaryColor="@color/colorRedAccent"
          app:met_singleLineEllipsis="true"
          />


      <com.rengwuxian.materialedittext.MaterialEditText
          android:id="@+id/input_layout_ped_contact_num_1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/phone_number_1"
          android:inputType="phone"
          app:met_checkCharactersCountAtBeginning="false"
          app:met_floatingLabel="highlight"
          app:met_maxCharacters="12"
          app:met_minCharacters="12"
          app:met_primaryColor="@color/colorRedAccent"
          app:met_singleLineEllipsis="true"
          />


    </LinearLayout>
  </LinearLayout>
</android.support.v7.widget.CardView>

